slave: don't prematurely set is_running to FALSE

When the session ends we

1) set the session id to NULL
2) set is_running to FALSE
3) call gdm_slave_stop which
4) runs the PostSesssion script if is_running is true
5) sets is_running to FALSE

4) will always fail because of 2, and 2 is unnecessary because of 5.

This commit defers settings is_running to false until gdm_session_stop.

Spotted by Gert Kulyk

https://bugzilla.gnome.org/show_bug.cgi?id=681888